--- a/app/src/main/res/layout/earthquake_list_item.xml
+++ b/app/src/main/res/layout/earthquake_list_item.xml
@@ -2,34 +2,75 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
+    android:padding="8dp"
     android:weightSum="3">
 
-    <TextView
-        android:id="@+id/earthQuakeListItem_textView_eMag"
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:padding="16dp"
-        android:text="TextView"
-        android:textAppearance="?android:textAppearanceSmall" />
+        android:layout_weight="0.75"
+        android:gravity="center">
 
-    <TextView
-        android:id="@+id/earthQuakeListItem_textView_ePlace"
+        <TextView
+            android:id="@+id/earthQuakeListItem_textView_eMag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/magnitude_circle"
+            android:fontFamily="sans-serif-medium"
+            android:gravity="center"
+            android:padding="16dp"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"
+            tools:text="8.9" />
+    </LinearLayout>
+
+
+    <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="TextView"
-        android:textAppearance="?android:textAppearanceSmall" />
+        android:layout_height="wrap_content"
+        android:layout_weight="1.25"
+        android:gravity="start"
+        android:orientation="vertical"
+        android:paddingStart="8dp"
+        android:paddingLeft="8dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:weightSum="2"
+        tools:ignore="RtlSymmetry">
+
+        <TextView
+            android:id="@+id/earthQuakeListItem_textView_ePlaceA"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:ellipsize="end"
+            android:textAppearance="?android:textAppearanceSmall"
+            android:textColor="@color/textColorEarthquakeDetails"
+            tools:text="12km WNW of " />
+
+        <TextView
+            android:id="@+id/earthQuakeListItem_textView_ePlaceB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ellipsize="end"
+            android:textAppearance="?android:textAppearanceSmall"
+            android:textColor="@color/textColorEarthquakeLocation"
+            android:textStyle="bold"
+            tools:text="Charagua, Bolivia" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/earthQuakeListItem_textView_eDate"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:gravity="center"
-        android:text="TextView"
-        android:textAppearance="?android:textAppearanceSmall" />
+        android:gravity="end"
+        android:textAppearance="?android:textAppearanceSmall"
+        android:textColor="@color/textColorEarthquakeDetails"
+        tools:ignore="RtlSymmetry"
+        tools:text="TextView" />
 </LinearLayout>
